<resources>
    <string name="app_name">After Death Care</string>
    <string name="action_settings">Settings</string>
    <string name="logoss">Cyclone Technologies</string>

    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">test@example.com</string>
    <string name="firebase_password" translatable="false">password</string>
    <string name="tag_send">send</string>
    <string name="tag_verify">verify</string>
    <string name="aadhar">Enter Your Addhar</string>
    <string name="verify">Verify</string>
    <string name="pincode">Enter Area Pincode</string>
    <string name="search">Search Hospital</string>
    <string name="fair">Calculate Fair</string>
    <string name="sourc">Enter Source</string>
    <string name="dest">Enter Destination</string>

    <string-array name="selection">
        <item>Please Select One</item>
        <item>User</item>
        <item>Driver</item>
        <item>Admin</item>

    </string-array>
    <string name="user">Enter Contact No.</string>
    <string name="username">Enter User ID</string>
    <string name="password">Enter Password</string>
    <string name="login">Sign In</string>
    <string name="title_activity_driver_home">DriverHome</string>
    <string name="minimum">atleast 6 character password</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_livelocation">Map</string>
    <string name="title_activity_admin">Admin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_register2">Register2</string>
</resources>
