<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.adc.om.afterdeathcare.settings">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/old_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="prompt password"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/changeEmail"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/old_email"
        android:layout_marginTop="19dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/send"
        android:layout_alignBottom="@+id/send"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/send"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/remove"
        android:layout_alignBottom="@+id/remove"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_send"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/changeEmail"
        android:layout_alignBottom="@+id/changeEmail"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_remove"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_email_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_password_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:text="@string/change_email"
        android:textStyle="bold" />

    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/change_password"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sending_pass_reset_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/change_password_button"
        android:text="@string/send_password_reset_email"
        android:textStyle="bold" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sending_pass_reset_button"
        android:layout_marginTop="18dp"
        android:text="@string/remove_user"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/progressBar"
        android:layout_marginTop="31dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/remove_user_button"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />
</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
