<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backs"
    tools:context="com.adc.om.afterdeathcare.LoginAll">


    <Spinner
        android:id="@+id/myspinner"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="319dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/border"
        android:entries="@array/selection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </Spinner>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:contentDescription="Image Name"
        app:layout_constraintBottom_toTopOf="@+id/myspinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="110dp"
        android:text="@string/app_name"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/myspinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="27dp"

        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintBottom_toTopOf="@+id/sendverifybt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myspinner"
        app:layout_constraintVertical_bias="0.138">

        <EditText
            android:id="@+id/numbered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawablePadding="15dp"
            android:hint="Enter mobile number"
            android:inputType="phone"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/verifiedsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_check_circle_black_24dp"
            android:visibility="invisible" />

    </LinearLayout>

    <EditText
        android:id="@+id/verificationed"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="11dp"
        android:background="@drawable/rect_text_edit"
        android:hint="Enter Code"
        android:inputType="number"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/sendverifybt"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="148dp"
        android:background="@drawable/button1"
        android:elevation="0dp"
        android:tag="@string/tag_send"
        android:text="Send OTP"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/timertv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="@+id/verificationed"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.0" />"
    android:clickable="true"
    android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/edittext1"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text|textEmailAddress|textEmailSubject"
        android:paddingLeft="20dp"
        android:textColorHint="#ffff"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/sendverifybt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myspinner" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/edittext1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColorHint="#ffff"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/sendverifybt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="199dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="379dp">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:layout_weight="2"
            android:background="@drawable/loginbtn"
            android:elevation="4dp"
            android:text="@string/login"


            android:textAllCaps="false"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.813"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendverifybt"
            app:layout_constraintVertical_bias="0.639" />

        <Button
            android:id="@+id/regs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:layout_weight="2"
            android:background="@drawable/loginbtn"
            android:elevation="4dp"
            android:text="Register Here"


            android:textAllCaps="false"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.813"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendverifybt"
            app:layout_constraintVertical_bias="0.639" />


    </LinearLayout>
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="3dp"
        android:onClick="onregclick"
        android:text="Are you a Driver ? Register Here"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
</android.support.constraint.ConstraintLayout>
